# besoc

./: Dockerfile.old  command  docker-compose.yml  telemetry-old.rs
student-service/: .dockerignore  Cargo.toml  Dockerfile.distroless  Dockerfile.distroless2  Dockerfile.new  Dockerfile.new2  Dockerfile.oldwork  Dockerfile.working  Makefile  docker-compose.apisix.yml  docker-compose.app.yml  docker-compose.db.yml  docker-compose.elk.yml  docker-compose.glitchtip.yml  docker-compose.jaeger.yml  docker-compose.kafka.yml  docker-compose.kafkaold.yml  docker-compose.kong.yml  docker-compose.redis.yml  docker-compose.signoz.yml  docker-compose.yml  init.sql  student-configmap.yaml  student-deployment.yaml  student-secret.yaml  student-service.yaml
student-service/.github/workflows/: deploy.yaml
student-service/.sqlx/: query-4c120be9b914186808952f636db0aed9fc9431ee115f1d3b2811cd5a124471aa.json  query-777c8e91ce51d55fa0b45648327f5b325c065188509786d5c80ea0a256c80e55.json  query-914c4d0221c4ef2fde6ec869e57a5c0d33008b25b141f14aa641c988b5f99292.json  query-aa6b49cc9f27c78892a291aca4871b20addd90277dba4003d33933aea4c93806.json  query-ad7b45a1a18b63bd9136b31f347dd5fe2e9d70c222117d61ab8cb0b5a53a7912.json  query-c023d3a5de4df6340ae1d83139740c9ada874bd2d08050b1fca991fd563746ac.json
student-service/apisix/: config.yaml  dashboard-conf.yaml
student-service/logstash/pipeline/: studnet-service.conf
student-service/migrations/: 20260413104211_init_students.sql
student-service/postgres/primary/: init-replication.sh  pg_hba.conf  postgresql.conf
student-service/postgres/replica/: init-replica.sh  postgresql.conf
student-service/src/: error.rs  health.rs  init-databases.sh  main.rs  otel_middleware.rs  request_id.rs  response.rs  sentry_layer.rs  state.rs  telemetry.rs
student-service/src/cache/: mod.rs
student-service/src/config/: app.rs  auth.rs  database.rs  helpers.rs  (+5 more)
user-service/: .env  Cargo.toml  Dockerfile  command  docker-compose.yml
(+16 files in other folders)
