[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

dotenv = "0.15"

sqlx = { version = "0.7", features = [
"runtime-tokio",
"postgres",
"macros"
] }

redis = { version = "0.24", features = ["tokio-comp"] }

rdkafka = { version = "0.36", features = ["tokio"] }

tracing = "0.1"
tracing-subscriber = "0.3"
